feat(project_service.go): adds deployment service
